// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersList test, correct_answer_id !== item.id 1`] = `
<React.Fragment>
  <UNDEFINED
    answerId={1}
    buttonParams={
      Object {
        "answerId": 1,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    className="mb-3"
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 0,
      }
    }
    type="app_viewQuestion_ANSWER_TYPE"
    userInfo={Object {}}
  />
  <UNDEFINED
    answerId={2}
    buttonParams={
      Object {
        "answerId": 2,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    className="mb-3"
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 0,
      }
    }
    type="app_viewQuestion_ANSWER_TYPE"
    userInfo={Object {}}
  />
  <UNDEFINED
    answerId={3}
    buttonParams={
      Object {
        "answerId": 3,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    className="mb-3"
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 0,
      }
    }
    type="app_viewQuestion_ANSWER_TYPE"
    userInfo={Object {}}
  />
</React.Fragment>
`;

exports[`AnswersList test, correct_answer_id === item.id 1`] = `
<React.Fragment>
  <UNDEFINED
    answerId={2}
    buttonParams={
      Object {
        "answerId": 2,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    className="mb-3"
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 1,
      }
    }
    type="app_viewQuestion_ANSWER_TYPE"
    userInfo={Object {}}
  />
  <UNDEFINED
    answerId={3}
    buttonParams={
      Object {
        "answerId": 3,
        "questionId": undefined,
        "whowasvoted": undefined,
      }
    }
    className="mb-3"
    questionData={
      Object {
        "answers": Array [
          Object {
            "id": 1,
            "userInfo": Object {},
          },
          Object {
            "id": 2,
            "userInfo": Object {},
          },
          Object {
            "id": 3,
            "userInfo": Object {},
          },
        ],
        "correct_answer_id": 1,
      }
    }
    type="app_viewQuestion_ANSWER_TYPE"
    userInfo={Object {}}
  />
</React.Fragment>
`;
